--- a/calculo_ns_carga.ipynb
+++ b/calculo_ns_carga.ipynb
@@ -8,25 +8,576 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Holidays"
+    "import os\n",
+    "import re\n",
+    "import pandas_gbq\n",
+    "import datetime as dt\n",
+    "from datetime import datetime, timedelta\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "import pandas as pd\n",
+    "from google.cloud import bigquery"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "usuario = 'JCORREDOR'\n",
+    "json = rf'C:\\Users\\JCORREDOR\\Falabella\\Planificación CX - Documentos\\Planificación y Control\\Scripts Planning\\Json\\bi-fcom-drmb-cx-sbx-53ef4ecfd219 1.json'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|\u001b[32m██████████\u001b[0m|\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>CaseNumber</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>DateCreated</th>\n",
+       "      <th>DateClosed</th>\n",
+       "      <th>ReOpenings</th>\n",
+       "      <th>Commerce_Name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>Level_1</th>\n",
+       "      <th>CRM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PE</td>\n",
+       "      <td>14522620</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td>0054W00000D6WJ7QAN</td>\n",
+       "      <td>Reclamo</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PE</td>\n",
+       "      <td>14521976</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td>0054W00000D6WJ7QAN</td>\n",
+       "      <td>Reclamo</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PE</td>\n",
+       "      <td>14522921</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td>0054W00000D6WJ7QAN</td>\n",
+       "      <td>Reclamo</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PE</td>\n",
+       "      <td>14528237</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td>0054W00000D6WJ7QAN</td>\n",
+       "      <td>Reclamo</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PE</td>\n",
+       "      <td>14527879</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td>0054W00000D6WJ7QAN</td>\n",
+       "      <td>Consulta</td>\n",
+       "      <td>SF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82490</th>\n",
+       "      <td>MX</td>\n",
+       "      <td>8477218</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td></td>\n",
+       "      <td>2.5 Caso duplicado</td>\n",
+       "      <td>ORO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82491</th>\n",
+       "      <td>MX</td>\n",
+       "      <td>8477163</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td></td>\n",
+       "      <td>2.5 Caso duplicado</td>\n",
+       "      <td>ORO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82492</th>\n",
+       "      <td>CO</td>\n",
+       "      <td>8477062</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td></td>\n",
+       "      <td>2.5 Caso duplicado</td>\n",
+       "      <td>ORO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82493</th>\n",
+       "      <td>CO</td>\n",
+       "      <td>8477503</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td></td>\n",
+       "      <td>1.6 Respuesta automática</td>\n",
+       "      <td>ORO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82494</th>\n",
+       "      <td>CO</td>\n",
+       "      <td>8476959</td>\n",
+       "      <td>Web</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Linio</td>\n",
+       "      <td></td>\n",
+       "      <td>1.6 Respuesta automática</td>\n",
+       "      <td>ORO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>82495 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Country CaseNumber Channel DateCreated  DateClosed  ReOpenings  \\\n",
+       "0          PE   14522620     Web  2023-04-09  2023-04-17           0   \n",
+       "1          PE   14521976     Web  2023-04-09  2023-04-14           0   \n",
+       "2          PE   14522921     Web  2023-04-09  2023-04-14           0   \n",
+       "3          PE   14528237     Web  2023-04-09  2023-04-17           0   \n",
+       "4          PE   14527879     Web  2023-04-09  2023-04-10           0   \n",
+       "...       ...        ...     ...         ...         ...         ...   \n",
+       "82490      MX    8477218     Web  2023-04-08  2023-04-10           1   \n",
+       "82491      MX    8477163     Web  2023-04-08  2023-04-10           0   \n",
+       "82492      CO    8477062     Web  2023-04-08  2023-04-29           0   \n",
+       "82493      CO    8477503     Web  2023-04-08  2023-04-10           1   \n",
+       "82494      CO    8476959     Web  2023-04-08  2023-04-08           1   \n",
+       "\n",
+       "      Commerce_Name                  id                   Level_1  CRM  \n",
+       "0             Linio  0054W00000D6WJ7QAN                   Reclamo   SF  \n",
+       "1             Linio  0054W00000D6WJ7QAN                   Reclamo   SF  \n",
+       "2             Linio  0054W00000D6WJ7QAN                   Reclamo   SF  \n",
+       "3             Linio  0054W00000D6WJ7QAN                   Reclamo   SF  \n",
+       "4             Linio  0054W00000D6WJ7QAN                  Consulta   SF  \n",
+       "...             ...                 ...                       ...  ...  \n",
+       "82490         Linio                            2.5 Caso duplicado  ORO  \n",
+       "82491         Linio                            2.5 Caso duplicado  ORO  \n",
+       "82492         Linio                            2.5 Caso duplicado  ORO  \n",
+       "82493         Linio                      1.6 Respuesta automática  ORO  \n",
+       "82494         Linio                      1.6 Respuesta automática  ORO  \n",
+       "\n",
+       "[82495 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project_id = 'bi-fcom-drmb-cx-sbx'\n",
+    "\n",
+    "credentials = service_account.Credentials.from_service_account_file(json)\n",
+    "client = bigquery.Client(credentials=credentials, project=project_id)\n",
+    "\n",
+    "\n",
+    "project_id = 'bi-fcom-drmb-cx-sbx'\n",
+    "dataset_id = 'cx_csr_data'\n",
+    "\n",
+    "table_name = 'tbl_ns_web_sf_Linio'\n",
+    "\n",
+    "query = \"SELECT * FROM `{}.{}.{}`\".format(project_id, dataset_id, table_name)\n",
+    "\n",
+    "df_full = pandas_gbq.read_gbq(query, project_id=project_id, dialect='standard')\n",
+    "\n",
+    "df_full"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nuevo df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Fecha_def</th>\n",
+       "      <th>Año-Mes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-04-11</td>\n",
+       "      <td>2023-04-11</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-04-12</td>\n",
+       "      <td>2023-04-12</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-04-13</td>\n",
+       "      <td>2023-04-13</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>2023-04-05</td>\n",
+       "      <td>2023-04-05</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>2023-04-06</td>\n",
+       "      <td>2023-04-06</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>2023-04-07</td>\n",
+       "      <td>2023-04-07</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>202304</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>317 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Fecha   Fecha_def Año-Mes\n",
+       "0    2023-04-09  2023-04-09  202304\n",
+       "1    2023-04-10  2023-04-10  202304\n",
+       "2    2023-04-11  2023-04-11  202304\n",
+       "3    2023-04-12  2023-04-12  202304\n",
+       "4    2023-04-13  2023-04-13  202304\n",
+       "..          ...         ...     ...\n",
+       "312  2023-04-04  2023-04-04  202304\n",
+       "313  2023-04-05  2023-04-05  202304\n",
+       "314  2023-04-06  2023-04-06  202304\n",
+       "315  2023-04-07  2023-04-07  202304\n",
+       "316  2023-04-08  2023-04-08  202304\n",
+       "\n",
+       "[317 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fechas = list(df_full['DateCreated'].unique())\n",
+    "df = pd.DataFrame(fechas, index=range(len(fechas)),columns=['Fecha'])\n",
+    "df['Fecha'] = df['Fecha'].apply(lambda x: x.strftime(\"%Y-%m-%d\"))\n",
+    "df['Fecha_def'] = df_full['DateCreated'].unique()\n",
+    "df['Año-Mes'] = df['Fecha'].str.slice(0, 7)\n",
+    "df['Año-Mes'] = df['Año-Mes'].apply(lambda x: x.replace(\"-\",\"\"))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Fecha_def</th>\n",
+       "      <th>Año-Mes</th>\n",
+       "      <th>Weekday</th>\n",
+       "      <th>Week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>2023-04-10</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-04-11</td>\n",
+       "      <td>2023-04-11</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-04-12</td>\n",
+       "      <td>2023-04-12</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-04-13</td>\n",
+       "      <td>2023-04-13</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>2023-04-05</td>\n",
+       "      <td>2023-04-05</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>2023-04-06</td>\n",
+       "      <td>2023-04-06</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>2023-04-07</td>\n",
+       "      <td>2023-04-07</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>2023-04-08</td>\n",
+       "      <td>202304</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>317 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Fecha   Fecha_def Año-Mes  Weekday  Week\n",
+       "0    2023-04-09  2023-04-09  202304        7    14\n",
+       "1    2023-04-10  2023-04-10  202304        1    15\n",
+       "2    2023-04-11  2023-04-11  202304        2    15\n",
+       "3    2023-04-12  2023-04-12  202304        3    15\n",
+       "4    2023-04-13  2023-04-13  202304        4    15\n",
+       "..          ...         ...     ...      ...   ...\n",
+       "312  2023-04-04  2023-04-04  202304        2    14\n",
+       "313  2023-04-05  2023-04-05  202304        3    14\n",
+       "314  2023-04-06  2023-04-06  202304        4    14\n",
+       "315  2023-04-07  2023-04-07  202304        5    14\n",
+       "316  2023-04-08  2023-04-08  202304        6    14\n",
+       "\n",
+       "[317 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Weekday'] = df['Fecha_def'].apply(lambda x: x.isoweekday())\n",
+    "df['Week'] = df['Fecha_def'].apply(lambda x: x.isocalendar()[1])\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
